# coding-agent-toddler

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/: COMMIT_STYLE_GUIDE.md
docs/: plan-session-conversation-hierarchy.md  plan.md  refactor-session.md  refactor.md
tests/: __init__.py  test_agent_loop.py  test_stop_conditions.py
toddler/: __init__.py  main.py
toddler/agent/: __init__.py  events.py  handler.py  loop.py  state_machine.py  stop_conditions.py
toddler/checkpoint/: __init__.py  manager.py  models.py  snapshot.py
toddler/cli/: __init__.py  app.py  commands.py  display.py  input_handler.py  renderer.py
toddler/config/: __init__.py  defaults.py  settings.py
toddler/context/: __init__.py  compaction.py  conversation_context.py  memory.py  project_map.py  system_prompt.py  window.py
toddler/llm/: __init__.py  base.py  messages.py  provider.py  responses.py  token_counter.py  types.py
toddler/session/: __init__.py  coordinator.py  manager.py  models.py  store.py
toddler/storage/: __init__.py  manager.py  models.py  store.py
toddler/streaming/: __init__.py  display.py  handler.py
toddler/tools/: __init__.py  base.py  executor.py  files.py  git.py  registry.py  search.py  shell.py
toddler/utils/: __init__.py  cli.py  logging.py
